Made changes to resolve packaging warnings generated by devtools::ceck_built

--- a/RHPCBenchmark/DESCRIPTION
+++ b/RHPCBenchmark/DESCRIPTION
@@ -1,6 +1,8 @@
 Package: RHPCBenchmark
 Title: R benchmarking package for high-performance computing environments
 Version: 0.0.0.9000
+Author: James McCombs [aut, cre]
+Maintainer: James McCombs <jmccombs@iu.edu>
 Authors@R: person("James", "McCombs", email = "jmccombs@iu.edu", role = c("aut", "cre"))
 Description: This package provides microbenchmarks for determining the run time
   performance of aspects of the R programming environment and packages
@@ -8,11 +10,11 @@ Description: This package provides microbenchmarks for determining the run time
   measures the performance of dense linear algebra kernels from the base
   package and sparse linear algebra kernels from the matrix package.
 Depends: R (>= 3.3.1),
-    Matrix,
-    methods 
-License: What license is it under?
+  Matrix,
+  methods,
+  stats
+License: Apache License 2.0 | file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports: Matrix (>= 1.2.6),
-    methods (>= 3.3.1)
+Imports:
 RoxygenNote: 6.0.1
