--- a/RHPCBenchmark/NAMESPACE
+++ b/RHPCBenchmark/NAMESPACE
@@ -4,3 +4,5 @@ export(DenseMatrixBenchmark)
 export(DenseMatrixDefaultMicrobenchmarks)
 export(SparseMatrixBenchmark)
 export(SparseMatrixVectorDefaultMicrobenchmarks)
+import(Matrix)
+import(methods)
