Added support for data frames to store results.  Fixed a bug in the sparse LU factorization benchmarks that was causing the LU factorization to be retained by reference after the first performance trial, enabling subsequent performance trials to be exectued nearly instantaneously.

--- a/RHPCBenchmark/DESCRIPTION
+++ b/RHPCBenchmark/DESCRIPTION
@@ -10,9 +10,10 @@ Description: This package provides microbenchmarks for determining the run time
   measures the performance of dense linear algebra kernels from the base
   package and sparse linear algebra kernels from the Matrix package.
 Depends: R (>= 3.3.1),
-  Matrix,
   methods,
-  stats
+  stats,
+  utils,
+  Matrix
 License: Apache License 2.0 | file LICENSE
 Encoding: UTF-8
 LazyData: true
