--- a/RHPCBenchmark/DESCRIPTION
+++ b/RHPCBenchmark/DESCRIPTION
@@ -13,6 +13,7 @@ Depends: R (>= 3.3.1),
   methods,
   stats,
   utils,
+  mvtnorm,
   Matrix,
   cluster
 License: Apache License 2.0 | file LICENSE
