Updated the documentation and resolved warnings caused by package functions being masked by identically named functions from other pachages.

--- a/RHPCBenchmark/DESCRIPTION
+++ b/RHPCBenchmark/DESCRIPTION
@@ -6,18 +6,17 @@ Maintainer: James McCombs <jmccombs@iu.edu>
 Authors@R: person("James", "McCombs", email = "jmccombs@iu.edu", role = c("aut", "cre"))
 Description: This package provides microbenchmarks for determining the run time
   performance of aspects of the R programming environment and packages
-  commonly used for high-performance computation.  The benchmark currently
+  commonly used for high-performance computation.
   measures the performance of dense linear algebra kernels from the base
   package and sparse linear algebra kernels from the Matrix package.
 Depends: R (>= 3.3.1),
-  methods,
-  stats,
+  methods
+Imports:
   utils,
   mvtnorm,
-  Matrix,
-  cluster
+  cluster,
+  Matrix
 License: Apache License 2.0 | file LICENSE
 Encoding: UTF-8
 LazyData: true
-Imports:
 RoxygenNote: 6.0.1
