Improved kernel descriptions in vignettes; added install scripts; changed the file names of the windows scripts; added exampeles to dense and sparse matrix benchmarks to address CRAN complaints; machine learning benchmarks still need examples.

--- a/RHPCBenchmark/DESCRIPTION
+++ b/RHPCBenchmark/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RHPCBenchmark
-Title: R Benchmarking Package for High-Performance Computing Environments
-Version: 0.1.0.0
+Title: Benchmarks for High-Performance Computing Environments
+Version: 0.1.0
 Author: James McCombs [aut, cre]
 Maintainer: James McCombs <jmccombs@iu.edu>
 Authors@R: person("James", "McCombs", email = "jmccombs@iu.edu", role = c("aut", "cre"))
