--- a/RHPCBenchmarkData/DESCRIPTION
+++ b/RHPCBenchmarkData/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: RHPCBenchmarkData
-Title: R data files for use with the RHPCBenchmark package
-Version: 0.1.0.0
+Title: Data files for use with RHPCBenchmark package
+Version: 0.1.0
 Author: James McCombs [aut, cre]
 Maintainer: James McCombs <jmccombs@iu.edu>
 Authors@R: person("James", "McCombs", email = "jmccombs@iu.edu", role = c("aut", "cre"))
