Added new examples and maintenance scripts; added vignette to the data package

--- a/RHPCBenchmark/NAMESPACE
+++ b/RHPCBenchmark/NAMESPACE
@@ -13,6 +13,7 @@ export(DeterminantMicrobenchmark)
 export(EigenAllocator)
 export(EigenMicrobenchmark)
 export(GetClusteringDefaultMicrobenchmarks)
+export(GetClusteringExampleMicrobenchmarks)
 export(GetDenseMatrixDefaultMicrobenchmarks)
 export(GetDenseMatrixExampleMicrobenchmarks)
 export(GetSparseCholeskyDefaultMicrobenchmarks)
