Added more examples and refactored names of machine learning and sparse matrix benchmark functions in the _kernel.R files

--- a/RHPCBenchmark/NAMESPACE
+++ b/RHPCBenchmark/NAMESPACE
@@ -2,7 +2,7 @@
 
 export(CholeskyAllocator)
 export(CholeskyMicrobenchmark)
-export(ClaraClusteringBenchmark)
+export(ClaraClusteringMicrobenchmark)
 export(ClusteringAllocator)
 export(CrossprodAllocator)
 export(CrossprodMicrobenchmark)
@@ -28,7 +28,7 @@ export(MatmatAllocator)
 export(MatmatMicrobenchmark)
 export(MatvecAllocator)
 export(MatvecMicrobenchmark)
-export(PamClusteringBenchmark)
+export(PamClusteringMicrobenchmark)
 export(QrAllocator)
 export(QrMicrobenchmark)
 export(RunDenseMatrixBenchmark)
@@ -37,13 +37,13 @@ export(RunSparseMatrixBenchmark)
 export(SolveAllocator)
 export(SolveMicrobenchmark)
 export(SparseCholeskyAllocator)
-export(SparseCholeskyBenchmark)
+export(SparseCholeskyMicrobenchmark)
 export(SparseLuAllocator)
-export(SparseLuBenchmark)
+export(SparseLuMicrobenchmark)
 export(SparseMatrixVectorAllocator)
-export(SparseMatrixVectorBenchmark)
+export(SparseMatrixVectorMicrobenchmark)
 export(SparseQrAllocator)
-export(SparseQrBenchmark)
+export(SparseQrMicrobenchmark)
 export(SvdAllocator)
 export(SvdMicrobenchmark)
 export(TransposeAllocator)
